Fix the alignment of the logo

--- a/client/view/Article/Article.css
+++ b/client/view/Article/Article.css
@@ -58,7 +58,7 @@
   display: flex;
   gap: 8px;
   align-items: center;
-  margin: 0 8px 0;
+  margin: 0 8px 0 0;
   font-size: 22px;
   @mixin font-lato-black-custom;
 }
